# e-co-lab-o-rated

./: BioTrayEcoImpactRust_2026v1.rs  Cargo.toml  chat.response.shard.v1.csv  chat.session.particle.v1.csv  package.json  tsconfig.json
aln/: response.shard.schema.v1.aln
chat_shards_core/src/: response.rs  session.rs
mar_pilot_sat_cell/: Cargo.toml
qpudatashards/: particles_MAR_SAT_Phoenix2026v1.csv
qpudatashards/particles/: BioPackFoodTrays2026v1.csv  SmartCorridorEcoImpact2026v1.csv
response_shard/: Cargo.toml
src/: index.ts
src/config/: phoenix.config.ts
src/domain/: proofs.ts  telemetry.ts
src/services/: decayService.ts  ecoScoreService.ts  pfasLibraryService.ts
tests/: chat_ker_ci.rs
