[workspace]
members = [
    "response_shard",
    "mar_pilot_sat_cell",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"
authors = ["Bostrom Ecosafety Stack"]
description = "ResponseShard discipline + MAR-SAT pilot mirror spine."

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
